--- a/jc-trello-app-front/src/components/ui/task-card/taskCard.module.css
+++ b/jc-trello-app-front/src/components/ui/task-card/taskCard.module.css
@@ -5,7 +5,6 @@
     width: 95%;
     padding: 1rem;
     border-radius: .8rem;
-    margin: 1rem 0px ;
     box-shadow: 0px 5px 15px #07172c;
     max-width: 20vw;
 }
